...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="rzg-gK-Oil" secondAttribute="top" constant="15" id="Z4x-rC-HXM"/>
                            <constraint firstAttribute="trailing" secondItem="rzg-gK-Oil" secondAttribute="trailing" id="m2t-5y-mXJ"/>
                            <constraint firstItem="rzg-gK-Oil" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sba-Uj-YF0"/>
                            <constraint firstAttribute="bottom" secondItem="rzg-gK-Oil" secondAttribute="bottom" id="x56-mS-5dY"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="q2Q-s8-Pu1">
                        <textField key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subreddit" textAlignment="natural" minimumFontSize="17" id="lea-s5-qC8">
                            <rect key="frame" x="89.5" y="5" width="235" height="34"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <accessibility key="accessibilityConfiguration" identifier="searchSubreddit"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                            <connections>
                                <outlet property="delegate" destination="BYZ-38-t0r" id="49x-Ss-gpN"/>
                            </connections>
                        </textField>
...
